2009-05-08  Miklos Szeredi <miklos@szeredi.hu>

	* Fix missing newlines in some printfs

	* Fix 'make install-strip'.  Reported by Dominick Layfield

2009-01-05  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.0-pre2

2008-12-08  Miklos Szeredi <miklos@szeredi.hu>

	* Implement poll support.  Patch by Tejun Heo

	* Add missing setattr flags to <fuse_lowlevel.h>.

	* Only pass valid flags to ->setattr().

2008-12-05  Miklos Szeredi <miklos@szeredi.hu>

	* Implement ioctl support.  On high level interface only
	"restricted" ioctls are supported (which are defined with the
	_IO(), _IOR(), _IOW() or _IOWR() macros).  Unrestricted ioctls
	will only be allwed to CUSE (Character Device in Userspace)
	servers.  Patch by Tejun Heo

2008-11-28  Miklos Szeredi <miklos@szeredi.hu>

	* If open sets fi->nonseekable, libfuse will tell the kernel that
	the file is not seekable.  Patch by Tejun Heo

2008-11-19  Miklos Szeredi <miklos@szeredi.hu>

	* lowlevel lib: fix deadlock if fuse_reply_* is called from the
	interrupt handling function.  Reported by Tero Marttila

2008-10-16  Miklos Szeredi <miklos@szeredi.hu>

	* Allow commas in options to be escaped with a backslash

	* Add new function: fuse_opt_add_opt_escaped()

	* Add missing fuse_reply_bmap() to the version script

2008-10-14  Miklos Szeredi <miklos@szeredi.hu>

	* Pass current file flags to read and write operations

2008-07-24  Miklos Szeredi <miklos@szeredi.hu>

	* Clean up debug output in highlevel lib

2008-07-10  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.0-pre1

2008-06-27  Miklos Szeredi <miklos@szeredi.hu>

	* Fix handling of (no)suid and (no)dev options if filesystem is
	mounted from /etc/fstab or via mount(8).  Reported by Jan Ondrej.

	* Skip calling mount(8) if /etc/mtab doesn't exist or if it's on a
	read-only filesystem.  This works around issues with certain mount
	implementations.  Reported by Szabolcs Szakacsits.

2008-06-16  Miklos Szeredi <miklos@szeredi.hu>
